@startuml Figura 2 

interface Calcula {
    +calcularArea(): double
    +calcularPerimetro(): double
}

abstract class FiguraGeometrica {
    -nombre: String
    +getNombre(): String
    +calcularArea(): double
    +calcularPerimetro(): double
}

class Circulo {
    -radio: double
    +Circulo(nombreFigura: String, radio: double)
    +calcularArea(): double
    +calcularPerimetro(): double
}

class Rectangulo {
    -base: double
    -altura: double
    +Rectangulo(nombreFigura: String, base: double, altura: double)
    +calcularArea(): double
    +calcularPerimetro(): double
}

class Triangulo {
    -base: double
    -altura: double
    +Triangulo(nombreFigura: String, base: double, altura: double)
    +calcularArea(): double
    +calcularPerimetro(): double
}

class FiguraGenerica {
    -figura: T
    +obtenerTipoFigura(): String
    +mostrarCaracteristicas(): void
}

FiguraGenerica --> Calcula

FiguraGeometrica <|-- Circulo
FiguraGeometrica <|-- Rectangulo
FiguraGeometrica <|-- Triangulo

FiguraGenerica --|> FiguraGeometrica

@enduml
